# MGA802_projet_final

./: LICENSE.md  README.md  data.yaml  main.py  requirements.txt  setup.cfg
Astraios/: __init__.py  champ_mag.py  constantes.py  materiau.py  objet_Atmopshere.py  objet_ChampMagnetique.py  objet_SpaceBody.py  objet_orbite.py  orbite.py  satMag.py
data/: donne_sans_cable_PFD.csv
frein_magnetique/: Atmopshere.py  Champ_magnetique.py  Constantes.py  Materiau.py  Orbite.py  Satellite_mag.py  __init__.py
frein_magnetique/data/: donne_sans_cable_energie.csv
source/: conf.py  index.rst
