[metadata]
name = frein_magnetique
version = 0.1
author = Bertrand Fabien, De Faria Ténessy, Barral Raphaël
description = Python package to model deorbitation of satellite using electromagnetic drag.
keywords = deorbitation, satellite, electromagnetic drag, tether
[options]
python_requires = >=3.11
install_requires =
    matplotlib~=3.9.0
    openpyxl
    ai.cs
    ppigrf~=1.0.2
    numpy~=2.0.0
    PyYAML~=6.0.1
    pandas~=2.2.2
    tqdm